GP-5842 support zstd compression in gfilesystem
Add support for zstd compressed files via executing user-provided zstd
cmd line decompressor tool, or 7zip cmd line archiver tool.

Fixes symlink support/handling in cpio files.

Change API: ByteProvider.length() - remove 'throws IOException'

Refactor a few GFilesystems to use AbstractSinglePayloadFileSystem
instead of duplicating same patterns.

Refactor lzsfe GFilesystem to use stdin/stdout streaming instead of tempfiles.